--- a/style.css
+++ b/style.css
@@ -31,3 +31,19 @@ body {
 }
 
 /* ----- zde začni psát vlastní CSS ----- */
+.horni li{
+    display: inline-block;
+    padding: 0.8em;
+}
+
+a {
+	display: block;
+	padding: 5px 15px;
+	color: #25133d;
+	text-decoration: none;
+}
+
+a:hover {
+	background-color: white;
+    color: #25133d;
+}
