button Vic informaci (odbarveni) + barva h2

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ body {
 .horni li{
     display: inline-block;
     padding: 0.8em;
+    padding-bottom: 0px;
+    margin: 0px;
 }
 
 a {
@@ -51,13 +53,23 @@ a:hover {
 .Super {
     padding: 0px 30px;
     position: relative;
-    height: 400px;
+    height: 450px;
+    background: linear-gradient(#e66465, #9198e5);
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 65px;
+    color: white;
+    padding: 40px 0px 0px 40px;
 }
 
+.text {
+    width: 400px;
+    padding-left: 40px;
+    font-size: 35px;
+    color: white;
+    font-weight: 400;
+}
 .foto {
     position: absolute;
     right: 0px;
@@ -66,7 +78,7 @@ h1 {
 
 .Stahnout a {
     position: absolute;
-    left: 50px;
+    left: 60px;
     bottom: 50px;
     display: block;
     padding: 10px;
@@ -74,14 +86,15 @@ h1 {
     text-decoration: none;
     color: white;
     width: 150px;
-    border-radius: 7%;
+    border-radius: 7px;
     background-color: #48418e;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+    border: 0.5px solid white;
 }
 
 .Vice a {
     position: absolute;
-    left: 220px;
+    left: 240px;
     bottom: 50px;
     display: block;
     padding: 10px;
@@ -89,9 +102,10 @@ h1 {
     text-decoration: none;
     color: white;
     width: 150px;
-    border-radius: 7%;
-    background-color: #48418e;
+    border-radius: 7px;
+    background-color: none;
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
+    border: 0.5px solid white;
 }
 
 
@@ -100,8 +114,12 @@ h1 {
 }
 
 .Tri {
-    padding: 30px 30px;
+    padding: 50px 60px;
     display: flex;
     justify-content: space-evenly;
+}
+
+h2 {
+    color: #48418e;
 }
 
