--- a/style.css
+++ b/style.css
@@ -131,3 +131,9 @@ h2 {
     color: #48418e;
 }
 
+.paticka {
+    background-color: #48418e;
+    text-align: center;
+    color: white;
+    padding: 10px 0px;
+}
