zarovnani - horni lista a super appka (padding, margin)

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 a {
 	display: block;
-	padding: 5px 15px;
+	padding: 0px 15px;
 	color: #25133d;
 	text-decoration: none;
 }
@@ -60,7 +60,8 @@ a:hover {
 h1 {
     font-size: 65px;
     color: white;
-    padding: 40px 0px 0px 40px;
+    padding: 40px 0px 30px 40px;
+    margin: 0px;
 }
 
 .text {
