--- a/style.css
+++ b/style.css
@@ -46,8 +46,9 @@ a {
 }
 
 a:hover {
-	background-color: white;
+	background-color: none;
     color: #25133d;
+    font-weight:700;
 }
 
 .Super {
@@ -58,7 +59,8 @@ a:hover {
 }
 
 h1 {
-    font-size: 65px;
+    font-size: 80px;
+    font-weight: 400;
     color: white;
     padding: 40px 0px 30px 40px;
     margin: 0px;
@@ -68,8 +70,8 @@ h1 {
     width: 400px;
     padding-left: 40px;
     font-size: 35px;
+    font-weight: 200;
     color: white;
-    font-weight: 400;
 }
 .foto {
     position: absolute;
